--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <h1>JB Enterprise</h1>
     </header>
     
-    <p>JB Enterprise. A special edition of Buses. The woner of JB Enterprise Md Balal Hossoin.</p><br><br><br>
+    <p>JB Enterprise. A special edition of Buses. The woner of JB Enterprise Md Balal Hossoin.</p><br><br>
+
+
+    <img src="image/banner6.jpg" alt=" buses">
 
     <div class="root">
         <H4>Root of JB Enterprise.</H4><br><br>
@@ -29,6 +32,7 @@
         </ol>
 
     </div>
+    <img src="image/download.jpg" alt="bus" height="600px" width="610px">
     <div form>
         <h4>Find your jurney tiket</h4>
 
